correcciones en base al cambio realizado en la estructura de la base de datos del commit anterior